--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ masthead_title           : # overrides the website title displayed in the masthe
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
-  provider               : false # "staticman_v2" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
+  provider               : "staticman_v2" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
   disqus:
     shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
@@ -72,10 +72,10 @@ comments:
     #    type               : # "date"
     #    options:
     #      format           : # "iso8601" #(default), "timestamp-seconds", "timestamp-milliseconds"
-    endpoint               : https://trstnstaticman.herokuapp.com/v2/entry/ # URL of your own deployment with trailing slash, will fallback to the public instance
+    endpoint               : https://trstnstaticman.fly.dev/v2/entry/ # URL of your own deployment with trailing slash, will fallback to the public instance
 staticman:
   branch                 : "master"
-  endpoint               : https://trstnstaticman.herokuapp.com/v2/entry/ # URL of your own deployment with trailing slash, will fallback to the public instance
+  endpoint               : https://trstnstaticman.fly.dev/v2/entry/ # URL of your own deployment with trailing slash, will fallback to the public instance
 reCaptcha:
   siteKey                :
   secret                 :
